src/inet/applications/packetdrill/parser.output
Terminals unused in grammar

   OPTION


State 60 conflicts: 1 shift/reduce


Grammar

    0 $accept: script $end

    1 script: events

    2 events: event
    3       | events event

    4 event: event_time action

    5 event_time: '+' time
    6           | time
    7           | '*'
    8           | time '~' time
    9           | '+' time '~' '+' time

   10 time: FLOAT
   11     | INTEGER

   12 action: packet_spec
   13       | syscall_spec

   14 packet_spec: udp_packet_spec

   15 udp_packet_spec: packet_prefix UDP '(' INTEGER ')'

   16 packet_prefix: direction

   17 direction: '<'
   18          | '>'

   19 syscall_spec: opt_end_time function_name function_arguments '=' expression opt_errno opt_note

   20 opt_end_time: %empty
   21             | ELLIPSIS time

   22 function_name: WORD

   23 function_arguments: '(' ')'
   24                   | '(' expression_list ')'

   25 expression_list: expression
   26                | expression_list ',' expression

   27 expression: ELLIPSIS
   28           | decimal_integer
   29           | hex_integer
   30           | WORD
   31           | MYSTRING
   32           | MYSTRING ELLIPSIS
   33           | binary_expression
   34           | array

   35 decimal_integer: INTEGER

   36 hex_integer: HEX_INTEGER

   37 binary_expression: expression '|' expression

   38 array: '[' ']'
   39      | '[' expression_list ']'

   40 opt_errno: %empty
   41          | WORD note

   42 opt_note: %empty
   43         | note

   44 note: '(' word_list ')'

   45 word_list: WORD
   46          | word_list WORD


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 23 24 44
')' (41) 15 23 24 44
'*' (42) 7
'+' (43) 5 9
',' (44) 26
'<' (60) 17
'=' (61) 19
'>' (62) 18
'[' (91) 38 39
']' (93) 38 39
'|' (124) 37
'~' (126) 8 9
error (256)
ELLIPSIS (258) 21 27 32
UDP (259) 15
OPTION (260)
FLOAT (261) 10
INTEGER (262) 11 15 35
HEX_INTEGER (263) 36
WORD (264) 22 30 41 45 46
MYSTRING (265) 31 32


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
script (24)
    on left: 1, on right: 0
events (25)
    on left: 2 3, on right: 1 3
event (26)
    on left: 4, on right: 2 3
event_time (27)
    on left: 5 6 7 8 9, on right: 4
time (28)
    on left: 10 11, on right: 5 6 8 9 21
action (29)
    on left: 12 13, on right: 4
packet_spec (30)
    on left: 14, on right: 12
udp_packet_spec (31)
    on left: 15, on right: 14
packet_prefix (32)
    on left: 16, on right: 15
direction (33)
    on left: 17 18, on right: 16
syscall_spec (34)
    on left: 19, on right: 13
opt_end_time (35)
    on left: 20 21, on right: 19
function_name (36)
    on left: 22, on right: 19
function_arguments (37)
    on left: 23 24, on right: 19
expression_list (38)
    on left: 25 26, on right: 24 26 39
expression (39)
    on left: 27 28 29 30 31 32 33 34, on right: 19 25 26 37
decimal_integer (40)
    on left: 35, on right: 28
hex_integer (41)
    on left: 36, on right: 29
binary_expression (42)
    on left: 37, on right: 33
array (43)
    on left: 38 39, on right: 34
opt_errno (44)
    on left: 40 41, on right: 19
opt_note (45)
    on left: 42 43, on right: 19
note (46)
    on left: 44, on right: 41 43
word_list (47)
    on left: 45 46, on right: 44 46


State 0

    0 $accept: . script $end

    FLOAT    shift, and go to state 1
    INTEGER  shift, and go to state 2
    '+'      shift, and go to state 3
    '*'      shift, and go to state 4

    script      go to state 5
    events      go to state 6
    event       go to state 7
    event_time  go to state 8
    time        go to state 9


State 1

   10 time: FLOAT .

    $default  reduce using rule 10 (time)


State 2

   11 time: INTEGER .

    $default  reduce using rule 11 (time)


State 3

    5 event_time: '+' . time
    9           | '+' . time '~' '+' time

    FLOAT    shift, and go to state 1
    INTEGER  shift, and go to state 2

    time  go to state 10


State 4

    7 event_time: '*' .

    $default  reduce using rule 7 (event_time)


State 5

    0 $accept: script . $end

    $end  shift, and go to state 11


State 6

    1 script: events .
    3 events: events . event

    FLOAT    shift, and go to state 1
    INTEGER  shift, and go to state 2
    '+'      shift, and go to state 3
    '*'      shift, and go to state 4

    $default  reduce using rule 1 (script)

    event       go to state 12
    event_time  go to state 8
    time        go to state 9


State 7

    2 events: event .

    $default  reduce using rule 2 (events)


State 8

    4 event: event_time . action

    ELLIPSIS  shift, and go to state 13
    '<'       shift, and go to state 14
    '>'       shift, and go to state 15

    $default  reduce using rule 20 (opt_end_time)

    action           go to state 16
    packet_spec      go to state 17
    udp_packet_spec  go to state 18
    packet_prefix    go to state 19
    direction        go to state 20
    syscall_spec     go to state 21
    opt_end_time     go to state 22


State 9

    6 event_time: time .
    8           | time . '~' time

    '~'  shift, and go to state 23

    $default  reduce using rule 6 (event_time)


State 10

    5 event_time: '+' time .
    9           | '+' time . '~' '+' time

    '~'  shift, and go to state 24

    $default  reduce using rule 5 (event_time)


State 11

    0 $accept: script $end .

    $default  accept


State 12

    3 events: events event .

    $default  reduce using rule 3 (events)


State 13

   21 opt_end_time: ELLIPSIS . time

    FLOAT    shift, and go to state 1
    INTEGER  shift, and go to state 2

    time  go to state 25


State 14

   17 direction: '<' .

    $default  reduce using rule 17 (direction)


State 15

   18 direction: '>' .

    $default  reduce using rule 18 (direction)


State 16

    4 event: event_time action .

    $default  reduce using rule 4 (event)


State 17

   12 action: packet_spec .

    $default  reduce using rule 12 (action)


State 18

   14 packet_spec: udp_packet_spec .

    $default  reduce using rule 14 (packet_spec)


State 19

   15 udp_packet_spec: packet_prefix . UDP '(' INTEGER ')'

    UDP  shift, and go to state 26


State 20

   16 packet_prefix: direction .

    $default  reduce using rule 16 (packet_prefix)


State 21

   13 action: syscall_spec .

    $default  reduce using rule 13 (action)


State 22

   19 syscall_spec: opt_end_time . function_name function_arguments '=' expression opt_errno opt_note

    WORD  shift, and go to state 27

    function_name  go to state 28


State 23

    8 event_time: time '~' . time

    FLOAT    shift, and go to state 1
    INTEGER  shift, and go to state 2

    time  go to state 29


State 24

    9 event_time: '+' time '~' . '+' time

    '+'  shift, and go to state 30


State 25

   21 opt_end_time: ELLIPSIS time .

    $default  reduce using rule 21 (opt_end_time)


State 26

   15 udp_packet_spec: packet_prefix UDP . '(' INTEGER ')'

    '('  shift, and go to state 31


State 27

   22 function_name: WORD .

    $default  reduce using rule 22 (function_name)


State 28

   19 syscall_spec: opt_end_time function_name . function_arguments '=' expression opt_errno opt_note

    '('  shift, and go to state 32

    function_arguments  go to state 33


State 29

    8 event_time: time '~' time .

    $default  reduce using rule 8 (event_time)


State 30

    9 event_time: '+' time '~' '+' . time

    FLOAT    shift, and go to state 1
    INTEGER  shift, and go to state 2

    time  go to state 34


State 31

   15 udp_packet_spec: packet_prefix UDP '(' . INTEGER ')'

    INTEGER  shift, and go to state 35


State 32

   23 function_arguments: '(' . ')'
   24                   | '(' . expression_list ')'

    ELLIPSIS     shift, and go to state 36
    INTEGER      shift, and go to state 37
    HEX_INTEGER  shift, and go to state 38
    WORD         shift, and go to state 39
    MYSTRING     shift, and go to state 40
    ')'          shift, and go to state 41
    '['          shift, and go to state 42

    expression_list    go to state 43
    expression         go to state 44
    decimal_integer    go to state 45
    hex_integer        go to state 46
    binary_expression  go to state 47
    array              go to state 48


State 33

   19 syscall_spec: opt_end_time function_name function_arguments . '=' expression opt_errno opt_note

    '='  shift, and go to state 49


State 34

    9 event_time: '+' time '~' '+' time .

    $default  reduce using rule 9 (event_time)


State 35

   15 udp_packet_spec: packet_prefix UDP '(' INTEGER . ')'

    ')'  shift, and go to state 50


State 36

   27 expression: ELLIPSIS .

    $default  reduce using rule 27 (expression)


State 37

   35 decimal_integer: INTEGER .

    $default  reduce using rule 35 (decimal_integer)


State 38

   36 hex_integer: HEX_INTEGER .

    $default  reduce using rule 36 (hex_integer)


State 39

   30 expression: WORD .

    $default  reduce using rule 30 (expression)


State 40

   31 expression: MYSTRING .
   32           | MYSTRING . ELLIPSIS

    ELLIPSIS  shift, and go to state 51

    $default  reduce using rule 31 (expression)


State 41

   23 function_arguments: '(' ')' .

    $default  reduce using rule 23 (function_arguments)


State 42

   38 array: '[' . ']'
   39      | '[' . expression_list ']'

    ELLIPSIS     shift, and go to state 36
    INTEGER      shift, and go to state 37
    HEX_INTEGER  shift, and go to state 38
    WORD         shift, and go to state 39
    MYSTRING     shift, and go to state 40
    '['          shift, and go to state 42
    ']'          shift, and go to state 52

    expression_list    go to state 53
    expression         go to state 44
    decimal_integer    go to state 45
    hex_integer        go to state 46
    binary_expression  go to state 47
    array              go to state 48


State 43

   24 function_arguments: '(' expression_list . ')'
   26 expression_list: expression_list . ',' expression

    ')'  shift, and go to state 54
    ','  shift, and go to state 55


State 44

   25 expression_list: expression .
   37 binary_expression: expression . '|' expression

    '|'  shift, and go to state 56

    $default  reduce using rule 25 (expression_list)


State 45

   28 expression: decimal_integer .

    $default  reduce using rule 28 (expression)


State 46

   29 expression: hex_integer .

    $default  reduce using rule 29 (expression)


State 47

   33 expression: binary_expression .

    $default  reduce using rule 33 (expression)


State 48

   34 expression: array .

    $default  reduce using rule 34 (expression)


State 49

   19 syscall_spec: opt_end_time function_name function_arguments '=' . expression opt_errno opt_note

    ELLIPSIS     shift, and go to state 36
    INTEGER      shift, and go to state 37
    HEX_INTEGER  shift, and go to state 38
    WORD         shift, and go to state 39
    MYSTRING     shift, and go to state 40
    '['          shift, and go to state 42

    expression         go to state 57
    decimal_integer    go to state 45
    hex_integer        go to state 46
    binary_expression  go to state 47
    array              go to state 48


State 50

   15 udp_packet_spec: packet_prefix UDP '(' INTEGER ')' .

    $default  reduce using rule 15 (udp_packet_spec)


State 51

   32 expression: MYSTRING ELLIPSIS .

    $default  reduce using rule 32 (expression)


State 52

   38 array: '[' ']' .

    $default  reduce using rule 38 (array)


State 53

   26 expression_list: expression_list . ',' expression
   39 array: '[' expression_list . ']'

    ','  shift, and go to state 55
    ']'  shift, and go to state 58


State 54

   24 function_arguments: '(' expression_list ')' .

    $default  reduce using rule 24 (function_arguments)


State 55

   26 expression_list: expression_list ',' . expression

    ELLIPSIS     shift, and go to state 36
    INTEGER      shift, and go to state 37
    HEX_INTEGER  shift, and go to state 38
    WORD         shift, and go to state 39
    MYSTRING     shift, and go to state 40
    '['          shift, and go to state 42

    expression         go to state 59
    decimal_integer    go to state 45
    hex_integer        go to state 46
    binary_expression  go to state 47
    array              go to state 48


State 56

   37 binary_expression: expression '|' . expression

    ELLIPSIS     shift, and go to state 36
    INTEGER      shift, and go to state 37
    HEX_INTEGER  shift, and go to state 38
    WORD         shift, and go to state 39
    MYSTRING     shift, and go to state 40
    '['          shift, and go to state 42

    expression         go to state 60
    decimal_integer    go to state 45
    hex_integer        go to state 46
    binary_expression  go to state 47
    array              go to state 48


State 57

   19 syscall_spec: opt_end_time function_name function_arguments '=' expression . opt_errno opt_note
   37 binary_expression: expression . '|' expression

    WORD  shift, and go to state 61
    '|'   shift, and go to state 56

    $default  reduce using rule 40 (opt_errno)

    opt_errno  go to state 62


State 58

   39 array: '[' expression_list ']' .

    $default  reduce using rule 39 (array)


State 59

   26 expression_list: expression_list ',' expression .
   37 binary_expression: expression . '|' expression

    '|'  shift, and go to state 56

    $default  reduce using rule 26 (expression_list)


State 60

   37 binary_expression: expression . '|' expression
   37                  | expression '|' expression .

    '|'  shift, and go to state 56

    '|'       [reduce using rule 37 (binary_expression)]
    $default  reduce using rule 37 (binary_expression)


State 61

   41 opt_errno: WORD . note

    '('  shift, and go to state 63

    note  go to state 64


State 62

   19 syscall_spec: opt_end_time function_name function_arguments '=' expression opt_errno . opt_note

    '('  shift, and go to state 63

    $default  reduce using rule 42 (opt_note)

    opt_note  go to state 65
    note      go to state 66


State 63

   44 note: '(' . word_list ')'

    WORD  shift, and go to state 67

    word_list  go to state 68


State 64

   41 opt_errno: WORD note .

    $default  reduce using rule 41 (opt_errno)


State 65

   19 syscall_spec: opt_end_time function_name function_arguments '=' expression opt_errno opt_note .

    $default  reduce using rule 19 (syscall_spec)


State 66

   43 opt_note: note .

    $default  reduce using rule 43 (opt_note)


State 67

   45 word_list: WORD .

    $default  reduce using rule 45 (word_list)


State 68

   44 note: '(' word_list . ')'
   46 word_list: word_list . WORD

    WORD  shift, and go to state 69
    ')'   shift, and go to state 70


State 69

   46 word_list: word_list WORD .

    $default  reduce using rule 46 (word_list)


State 70

   44 note: '(' word_list ')' .

    $default  reduce using rule 44 (note)
